GNOME Bugzilla – Bug 728871
gssdp-client: Use g_warning() instead of g_error()
Last modified: 2019-02-22 09:29:52 UTC
A minor change, but important for prevent client abort()s in conditions which cause hostname resolution to fail. In this particular case, the FD limit had been reached.
Created attachment 275051 [details] [review] gssdp-client: Use g_warning() instead of g_error() get_host_ip() can gracefully fail, and all the code which calls it can handle graceful failure. There’s no need for a non-graceful failure using g_error(), which will just cause unnecessary abort()s in client applications.
Review of attachment 275051 [details] [review]: +1, some left-over I assume
Attachment 275051 [details] pushed as 468e985 - gssdp-client: Use g_warning() instead of g_error()