gssdp-client: Use g_warning() instead of g_error()

get_host_ip() can gracefully fail, and all the code which calls it can
handle graceful failure. There’s no need for a non-graceful failure
using g_error(), which will just cause unnecessary abort()s in client
applications.

https://bugzilla.gnome.org/show_bug.cgi?id=728871